v0 finished. Added Dockerfile for sqlite and application

--- a/ui/components/drawer.templ
+++ b/ui/components/drawer.templ
@@ -1,22 +1,39 @@
 package components
 
 script closeDrawer(id string) {
-    document.getElementById(id).classList.remove("w-64");
-    document.getElementById(id + "-backdrop").classList.remove("opacity-100");
-    document.getElementById(id + "-backdrop").classList.add("opacity-0");
+    document.getElementById(id).classList.remove("w-96");
+
+    const backdrop = document.getElementById(id + "-backdrop");
+    backdrop.classList.remove("opacity-100");
+    backdrop.classList.add("opacity-0");
+    backdrop.classList.remove("pointer-events-auto");
+    backdrop.classList.add("pointer-events-none");
+
+    document.getElementById("body").classList.remove("overflow-hidden");
 }
 
 templ Drawer(data struct {
     ID string
 }) {
-    <div id={data.ID} class="fixed top-0 right-0 h-full w-0 bg-white shadow-lg overflow-auto transition-width duration-300 z-50">
-        <button
-            onClick={closeDrawer(data.ID)}
-            class="m-4 text-gray-600 hover:text-black"
-        >
-            &times;
-        </button>
-        <div id="drawer-content" class="p-4"></div>
+    <div
+        id={data.ID}
+        class="h-screen fixed top-0 right-0 w-0 bg-white shadow-lg overflow-auto transition-width duration-300 z-50"
+    >
+        <div class="relative h-full">
+            <button
+                onClick={closeDrawer(data.ID)}
+                class="absolute top-2 right-2 text-gray-600 hover:text-black"
+            >
+                &times;
+            </button>
+            <div id="drawer-content" class="p-4">
+                { children... }
+            </div>
+        </div>
     </div>
-    <div id={data.ID + "-backdrop"} class="fixed inset-0 bg-black opacity-0 pointer-events-none transition-opacity duration-300"></div>
+    <div
+        id={data.ID + "-backdrop"}
+        class="h-screen fixed inset-0 bg-black/35 opacity-0 pointer-events-none transition-opacity duration-300 z-40"
+        onClick={closeDrawer(data.ID)}
+    ></div>
 }
