--- a/ui/components/sidebar.templ
+++ b/ui/components/sidebar.templ
@@ -5,7 +5,7 @@ import i "github.com/callsamu/templicons"
 templ Sidebar(data struct {
     CurrentUrl string
 }) {
-    <div class="h-screen fixed top-0 left-0 w-64 bg-white shadow-sm border-r">
+    <div class="hidden h-screen lg:block lg:fixed top-0 left-0 lg:w-64 bg-white shadow-sm border-r">
         <div class="space-y-1 py-6 px-6">
             <h1 class="text-2xl font-bold text-gray-800">
                 GoTail
