--- a/ui/logs.templ
+++ b/ui/logs.templ
@@ -58,7 +58,7 @@ templ LogsView(data struct {
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>GoTail</title>
+      <title>GoTail - Logs</title>
       <script src="https://cdn.tailwindcss.com"></script>
       <style>
         html, body {
