fixed db queries with timestamp formating, and added some ui

--- a/ui/logs.templ
+++ b/ui/logs.templ
@@ -187,6 +187,7 @@ templ LogsView(data struct {
                 <option value="WARNING" selected?={data.Severity=="WARNING"}>WARNING</option>
                 <option value="ERROR" selected?={data.Severity=="ERROR"}>ERROR</option>
                 <option value="DEBUG" selected?={data.Severity=="DEBUG"}>DEBUG</option>
+                <option value="FATAL" selected?={data.Severity=="FATAL"}>FATAL</option>
               </select>
             </div>
 
